After the linear layer the shape is

--- a/days/w1d1/pytorch_tuto.ipynb
+++ b/days/w1d1/pytorch_tuto.ipynb
@@ -243,6 +243,7 @@
         "d = torch.randn((), device=device, dtype=dtype, requires_grad=True)\n",
         "\n",
         "learning_rate = 1e-3\n",
+        "epochs = 2000\n",
         "for t in range(epochs):\n",
         "    # Forward pass: compute predicted y using operations on Tensors. (same as above)\n",
         "    y_pred = ...\n",
@@ -367,10 +368,12 @@
         "model = torch.nn.Sequential(\n",
         "    # Important note: Linear contains a matrix that is always applied to the last dimension of a tensor.\n",
         "    torch.nn.Linear(3, 1),\n",
+        "    # After the linear layer, the shape is ...\n",
         "    # Note: Flatten default arguments are Flatten(start_dim = 1, end_dim = -1)\n",
         "    # By default, start_dim = 1 because 0 corresponds to the batch dimension.\n",
         "    # We use flatten because we want the final tensor to match the shape of y.\n",
         "    torch.nn.Flatten(start_dim=0, end_dim=1)\n",
+        "    # After the flatten layer, the shape is ...\n",
         ")\n",
         "\n",
         "# The nn package also contains definitions of popular loss functions; in this\n",
@@ -378,6 +381,7 @@
         "loss_fn = torch.nn.MSELoss(reduction='mean')\n",
         "\n",
         "learning_rate = 1e-3\n",
+        "epochs = 2000\n",
         "for t in range(epochs):\n",
         "\n",
         "    # Forward pass: compute predicted y by passing x to the model. Module objects\n",
