restructure the beginning of adversarial attack

--- a/days/w1d2/Adversarial_Attacks.ipynb
+++ b/days/w1d2/Adversarial_Attacks.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "FtYr-7cjM8RR"
@@ -10,6 +11,17 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "In Colab: Runtime -> Change run time type to CPU\n",
+        "\n",
+        "This is not strictly necessary, but it will save you time as GPU operations are tricky in this exercise."
+      ]
+    },
+    {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "k47frxk_M8RV"
@@ -33,6 +45,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "h5C4q42mM8RW"
@@ -65,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -73,7 +86,24 @@
         "id": "Z43vn-7uM8RW",
         "outputId": "ee7b09a1-e104-473f-d5a7-c2c23907fbae"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/var/folders/zs/g6j1xx9x3j1flh_7kppcbc740000gn/T/ipykernel_46495/2601536644.py:13: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+            "  set_matplotlib_formats('svg', 'pdf') # For export\n",
+            "Global seed set to 42\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Using device cpu\n"
+          ]
+        }
+      ],
       "source": [
         "## Standard libraries\n",
         "import os\n",
@@ -134,6 +164,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "REbQQjzgM8RZ"
@@ -144,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -152,7 +183,18 @@
         "id": "8JK3vFwvM8RZ",
         "outputId": "bd2238a6-a3eb-4481-c966-231bb87cd6fb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Downloading https://raw.githubusercontent.com/phlippe/saved_models/main/tutorial10/TinyImageNet.zip...\n",
+            "Unzipping file...\n",
+            "Downloading https://raw.githubusercontent.com/phlippe/saved_models/main/tutorial10/patches.zip...\n",
+            "Unzipping file...\n"
+          ]
+        }
+      ],
       "source": [
         "import urllib.request\n",
         "from urllib.error import HTTPError\n",
@@ -182,17 +224,15 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {
-        "id": "zbTAU-MsM8RZ"
-      },
+      "metadata": {},
       "source": [
-        "## Deep CNNs on ImageNet\n",
-        "\n",
         "For our experiments in this notebook, we will use common CNN architectures trained on the ImageNet dataset. Such models are luckily provided by PyTorch's torchvision package, and hence we just need to load the model of our preference. For the results on the website and default on Google Colab, we use a ResNet34. Feel free to experiment with other architectures as well, the code is mainly independent of the specific architecture we choose."
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -237,6 +277,15 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Deep CNNs on ImageNet (Only Run)"
+      ]
+    },
+    {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "2-5wlv3xM8Ra"
@@ -284,6 +333,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "fMIufXgoM8Rb"
@@ -345,10 +395,12 @@
       },
       "outputs": [],
       "source": [
+        "# This takes some time and is not necessary.\n",
         "# _ = eval_model(data_loader)"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Gz47dDqRM8Rc"
@@ -418,6 +470,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "tFpbF4kPM8Rc"
@@ -448,6 +501,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Om9auNhMM8Rd"
@@ -457,6 +511,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "2XvnxNGHM8Rd"
@@ -478,6 +533,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "nfL3fXoKIUTI"
@@ -492,6 +548,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "DEJdxFH-JRKl"
@@ -525,6 +582,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "x5dBCTrFM8Rd"
@@ -551,6 +609,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "GmRboOUsM8Re"
@@ -577,6 +636,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "DLKFv2iTM8Re"
@@ -586,6 +646,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "stBwNC-VM8Re"
@@ -619,6 +680,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "c9Pwz6ndM8Rf"
@@ -643,6 +705,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "MZ3t363NM8Rf"
@@ -681,6 +744,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "pq_6vbGDM8Rf"
@@ -690,6 +754,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -740,6 +805,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "B7fWDjd6M8Rg"
@@ -774,6 +840,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "RsQiBguxM8Rg"
@@ -824,6 +891,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "I9F5HjI9M8Rg"
@@ -848,6 +916,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "xFtz4Dr6M8Rg"
@@ -882,6 +951,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "lQ45TSpxM8Rh"
@@ -927,6 +997,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "6RGfjH81M8Rh"
@@ -948,6 +1019,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "b_27JvzKM8Rh"
@@ -971,6 +1043,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "xcc_kSAJM8Ri"
@@ -1011,6 +1084,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "kect6hc8M8Ri"
@@ -1032,6 +1106,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "CkzmS_aMM8Ri"
@@ -1041,6 +1116,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "egqMQNHZM8Rj"
@@ -1069,6 +1145,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "kZh3h6l3M8Rj"
@@ -1105,6 +1182,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "060Vz2Y9M8Rj"
@@ -1114,6 +1192,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "IxIGVwcHM8Rj"
@@ -1132,6 +1211,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "q3I-z2W4M8Rj"
@@ -1143,6 +1223,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "pHwzu1KIM8Rj"
@@ -1158,6 +1239,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Hu9WYIPPM8Rk"
@@ -1172,6 +1254,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
