reduce batch size

--- a/days/w1d2/Adversarial_Attacks.ipynb
+++ b/days/w1d2/Adversarial_Attacks.ipynb
@@ -13,7 +13,9 @@
     {
       "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "accelerator": "CPU"
+      },
       "source": [
         "In Colab: Runtime -> Change run time type to CPU\n",
         "\n",
@@ -78,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -86,24 +88,7 @@
         "id": "Z43vn-7uM8RW",
         "outputId": "ee7b09a1-e104-473f-d5a7-c2c23907fbae"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/var/folders/zs/g6j1xx9x3j1flh_7kppcbc740000gn/T/ipykernel_46495/2601536644.py:13: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
-            "  set_matplotlib_formats('svg', 'pdf') # For export\n",
-            "Global seed set to 42\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Using device cpu\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "## Standard libraries\n",
         "import os\n",
@@ -175,7 +160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -183,18 +168,7 @@
         "id": "8JK3vFwvM8RZ",
         "outputId": "bd2238a6-a3eb-4481-c966-231bb87cd6fb"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Downloading https://raw.githubusercontent.com/phlippe/saved_models/main/tutorial10/TinyImageNet.zip...\n",
-            "Unzipping file...\n",
-            "Downloading https://raw.githubusercontent.com/phlippe/saved_models/main/tutorial10/patches.zip...\n",
-            "Unzipping file...\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import urllib.request\n",
         "from urllib.error import HTTPError\n",
@@ -321,7 +295,7 @@
         "assert os.path.isdir(imagenet_path), f\"Could not find the ImageNet dataset at expected path \\\"{imagenet_path}\\\". \" + \\\n",
         "                                     f\"Please make sure to have downloaded the ImageNet dataset here, or change the {DATASET_PATH} variable.\"\n",
         "dataset = torchvision.datasets.ImageFolder(root=imagenet_path, transform=plain_transforms)\n",
-        "data_loader = data.DataLoader(dataset, batch_size=32, shuffle=False, drop_last=False, num_workers=1)\n",
+        "data_loader = data.DataLoader(dataset, batch_size=8, shuffle=False, drop_last=False, num_workers=1)\n",
         "\n",
         "# Load label names to interpret the label numbers 0 to 999\n",
         "with open(os.path.join(imagenet_path, \"label_list.json\"), \"r\") as f:\n",
@@ -496,7 +470,7 @@
         "print(\"loaded\")\n",
         "with torch.no_grad():\n",
         "    preds = pretrained_model(exmp_batch.to(device))\n",
-        "for i in range(1,17,5):\n",
+        "for i in range(5):\n",
         "    show_prediction(exmp_batch[i], label_batch[i], preds[i])"
       ]
     },
@@ -577,6 +551,7 @@
         "    \"\"\"\n",
         "    # Tip: You can use torch.gather to take the probability of the corresponding label of each image in parallel.\n",
         "    ... # the 2 following lines just indicates the shape of what must be returned and  must be adapted\n",
+        "    \n",
         "    fake_imgs, noise_grads = imgs, torch.sign(imgs)\n",
         "    return fake_imgs, noise_grads"
       ]
@@ -604,7 +579,7 @@
         "with torch.no_grad():\n",
         "    adv_preds = pretrained_model(adv_imgs.to(device))\n",
         "    \n",
-        "for i in range(1,17,5):\n",
+        "for i in range(5):\n",
         "    show_prediction(exmp_batch[i], label_batch[i], adv_preds[i], adv_img=adv_imgs[i], noise=noise_grad[i])"
       ]
     },
