add tips, to go faster :)

--- a/days/w1d2/Adversarial_Attacks.ipynb
+++ b/days/w1d2/Adversarial_Attacks.ipynb
@@ -549,10 +549,15 @@
         "    Returns:\n",
         "    fake_imgs (B C H W), noise_grads (B C H W)\n",
         "    \"\"\"\n",
-        "    # Tip: You can use torch.gather to take the probability of the corresponding label of each image in parallel.\n",
-        "    ... # the 2 following lines just indicates the shape of what must be returned and  must be adapted\n",
-        "    \n",
+        "    # Tip: Just calculate the loss and do a gradient ascent instead of a gradient descent.\n",
+        "    # (The solution uses the \"torch.gather\" function, but this is not really necessary.)\n",
+        "    ... \n",
+        "    ...\n",
+        "\n",
+        "\n",
+        "    # The following lines only show the type of what has to be returned and should be adapted\n",
         "    fake_imgs, noise_grads = imgs, torch.sign(imgs)\n",
+        "    fake_imgs.detach_()\n",
         "    return fake_imgs, noise_grads"
       ]
     },
