Add adversarial patch in Bonus

--- a/days/w1d2/Adversarial_Attacks.ipynb
+++ b/days/w1d2/Adversarial_Attacks.ipynb
@@ -632,7 +632,7 @@
         "id": "stBwNC-VM8Re"
       },
       "source": [
-        "### Adversarial Patches\n",
+        "### Adversarial Patches (Bonus)\n",
         "\n",
         "Instead of changing every pixel by a little bit, we can also try to change a small part of the image into whatever values we would like. In other words, we will create a small image patch that covers a minor part of the original image but causes the model to confidentially predict a specific class we choose. This form of attack is an even bigger threat in real-world applications than FSGM. Imagine a network in an autonomous car that receives a live image from a camera. Another driver could print out a specific pattern and put it on the back of his/her vehicle to make the autonomous car believe that the car is actually a pedestrian. Meanwhile, humans would not notice it. [Tom Brown et al.](https://arxiv.org/pdf/1712.09665.pdf) proposed a way of learning such adversarial image patches robustly in 2017 and provided a short demonstration on [YouTube](https://youtu.be/i1sp4X57TL4). Interestingly, if you add a small picture of the target class (here *toaster*) to the original image, the model does not pick it up at all. A specifically designed patch, however, which only roughly looks like a toaster, can change the network's prediction instantaneously.\n",
         "\n",
