Adam and SGD notebook with way more tips

--- a/mlab/w1d4_part1_new.ipynb
+++ b/mlab/w1d4_part1_new.ipynb
@@ -34,6 +34,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "tZbgsexNBM3f"
@@ -143,8 +144,6 @@
         "\n",
         "Powers of two are also common - the idea here is that work can be recursively divided up among different GPUs or within a GPU. For example, a matrix multiplication can be expressed by recursively dividing each matrix into four equal blocks and performing eight smaller matrix multiplications between the blocks.\n",
         "\n",
-        "Finally, there are considerations around the alignment of data in memory and \"coalesced\" accesses to that data. If this sort of thing sounds fun to you, make sure to attend GPU day on W1D6. :)\n",
-        "\n",
         "## Computing Gradients in PyTorch - W1D3 Review\n",
         "\n",
         "Recall from W1D3 that gradients are only saved for `Tensor`s for which `requires_grad=True`. For convenience, `nn.Parameter` automatically sets `requires_grad=True` on the wrapped `Tensor`. As you call `torch` functions, PyTorch tracks the relevant information needed in case you call `backward` later on, at which point it does the actual computation to compute the gradient and stores it in the `Tensor`'s `grad` field.\n",
@@ -199,6 +198,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "AtdsUUxLMQpB"
@@ -260,6 +260,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "U4ZfQBiXNMKg"
@@ -286,6 +287,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Xb2Ags0kMS-6"
@@ -330,6 +332,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "uaT_7IHAMaRa"
@@ -384,6 +387,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "qhqY7KktMb9X"
@@ -426,6 +430,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "1iEhny7HMdp6"
@@ -474,6 +479,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "uep2eUdhMfhZ"
@@ -515,6 +521,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "BeZD0nM6Mh5y"
@@ -577,6 +584,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "_gbo8h4BMjq5"
@@ -618,6 +626,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "BmLlpGzAMljt"
@@ -652,6 +661,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "UbwpxnGhMngU"
@@ -722,6 +732,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "bThJXfzKMpad"
@@ -779,6 +790,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "v4Eh2ij1MrDb"
@@ -824,6 +836,31 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Why do we have to zero the gradient in PyTorch? \n",
+        "- Why do we use the word 'stochastic' in 'Stochastic gradient descent' in the context of deep learning?\n",
+        "\n",
+        "SGD:\n",
+        "- Below, read the method zero_grad. You can note that in PyTorch, to zero a gradient means assigning None.\n",
+        "- We will implement successively the pure SGD, the sgd with weight decay, and the SGD with momentum. Momentum, weight_decay, and update with learning rate must be modular operation.\n",
+        "\n",
+        "Implement steps:\n",
+        "1. `# update` Implement the most basic version of SGD possible\n",
+        "- Why do we need the 'with torch.inference_mode()' context manager?\n",
+        "2. `# weight_decay`: What is the formula of the update when there is some weight_decay (ie when we penalize each parameter squared)? Assume wd absorbs the constant.\n",
+        "- Tip: let's say we optimize `L(X, y) = (ax_1 + bx_2 + c - y)^2` with respect to `a`, `b` and `c`.\n",
+        "- Adding weight_decay means that instead of minimizing `L`, we minimize `g(X, y) =  L(X, y) + wd(a^2 + b^2 + c^2)/2`\n",
+        "- For this example, what is the formula of the gradient wrt `a`,`b` and `c`?\n",
+        "- In the code, at the beginning of the step function, replace the gradient by `g = p.grad + self.wd * p`\n",
+        "3. `# momentum`: Why do we need `self.running_average` in the `__init__`? Add momentum. Separate the cases `self.momentum` equals zero or not.\n",
+        "\n",
+        "There are multiple ways to implement SGD, so don't panic if there is some ambiguity and look at the solution to compare with the PyTorch implementation when you have used every variable.\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -839,13 +876,29 @@
         "            https://pytorch.org/docs/stable/generated/torch.optim.SGD.html#torch.optim.SGD\n",
         "\n",
         "        \"\"\"\n",
-        "        pass\n",
+        "        self.params = list(params)\n",
+        "        self.lr = lr\n",
+        "        self.wd = weight_decay\n",
+        "        self.momentum = momentum\n",
+        "        \n",
+        "        # running average of the gradient if there is some momentum\n",
+        "        self.running_average = [None for _ in self.params]\n",
         "\n",
         "    def zero_grad(self) -> None:\n",
-        "        pass\n",
+        "        for p in self.params:\n",
+        "            p.grad = None\n",
         "\n",
         "    def step(self) -> None:\n",
-        "        pass\n",
+        "        with torch.inference_mode():\n",
+        "            for i, p in enumerate(self.params):\n",
+        "                # weight decay\n",
+        "                ...\n",
+        "\n",
+        "                # momentum\n",
+        "                ...\n",
+        "\n",
+        "                # update\n",
+        "                ...\n",
         "\n",
         "\n",
         "if MAIN:\n",
@@ -853,6 +906,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "kaF8bVdaMtEc"
@@ -860,6 +914,39 @@
       "source": [
         "\n",
         "### Adam\n"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Adam, by far the most used optimizer.\n",
+        "\n",
+        "It's a combination of SGD+RMSProps and uses one momentum for the gradient, and another for the gradient squared.\n",
+        "\n",
+        "1. Adam\n",
+        "Tip: There is no `if` condition in Adam because `beta1` and `beta2` are always stricly positive.\n",
+        "- `sum_of_gradient = previous_sum_of_gradient * beta1 + gradient * (1 - beta1)` (SGD+Momentum)\n",
+        "- `sum_of_gradient_squared = previous_sum_of_gradient_squared * beta2 + gradient² * (1- beta2)` (RMSProp)\n",
+        "- `delta = -learning_rate * sum_of_gradient / sqrt(sum_of_gradient_squared)`\n",
+        "- Update the gradient\n",
+        "\n",
+        "2. More stability + regularization\n",
+        "- Add `self.eps` to the denominator, outside the square root.\n",
+        "- At the beginning of the step function, replace the gradient by `g = p.grad + self.wd * p`\n",
+        "\n",
+        "3. Adam + Correction\n",
+        "- In the `__init__`, `self.b1` and `self.b2` are a list of zeros, so we need a correction:\n",
+        "- In the update, use a correction: `b1_hat = self.b1[i] / (1.0 - self.beta1**self.t)`\n",
+        "- Generally `beta1 = 0.9`, and `beta2 = 0.999`.\n",
+        "- Same for `b2_hat`.\n",
+        "\n",
+        "\n",
+        "NB: The correction is important only at the beginning of the optimization process (self.t small).\n",
+        "The the correction is needed because self.b1 and self.b2 are initialized at zero.\n",
+        "\n",
+        "Try to pass the tests."
       ]
     },
     {
@@ -884,7 +971,17 @@
         "        Like the PyTorch version, but assumes amsgrad=False and maximize=False\n",
         "            https://pytorch.org/docs/stable/generated/torch.optim.Adam.html#torch.optim.Adam\n",
         "        \"\"\"\n",
-        "        pass\n",
+        "        self.params = list(params)\n",
+        "        self.lr = lr\n",
+        "        self.beta1, self.beta2 = betas  # momenti of b1 and b2\n",
+        "        self.eps = eps\n",
+        "        self.wd = weight_decay\n",
+        "\n",
+        "        # sum_of_gradient for each param\n",
+        "        # & sum_of_gradient_squared for each param\n",
+        "        self.b1 = [torch.zeros_like(p) for p in self.params]\n",
+        "        self.b2 = [torch.zeros_like(p) for p in self.params]\n",
+        "        self.t = 0\n",
         "\n",
         "    def zero_grad(self) -> None:\n",
         "        pass\n",
