add the article to read

--- a/mlab/w1d4_part1_new.ipynb
+++ b/mlab/w1d4_part1_new.ipynb
@@ -801,6 +801,9 @@
         "\n",
         "Now let's build our own drop-in replacement for these three classes from `torch.optim`. The documentation pages for these algorithms have pseudocode you can use to implement your step method.\n",
         "\n",
+        "First Read this article:\n",
+        "https://towardsdatascience.com/a-visual-explanation-of-gradient-descent-methods-momentum-adagrad-rmsprop-adam-f898b102325c\n",
+        "\n",
         "### Gotcha: In-Place Operations\n",
         "\n",
         "Be careful with expressions like `x = x + y` and `x += y`. They are NOT equivalent in Python.\n",
