--- a/days/w1d5/vanilla_policy_gradient.ipynb
+++ b/days/w1d5/vanilla_policy_gradient.ipynb
@@ -19,7 +19,12 @@
     "Read all the code, then:\n",
     "- Complete the ... in the compute_loss function.\n",
     "- Use https://github.com/patrick-kidger/torchtyping to type the functions get_policy, get_action. You can draw inspiration from the compute_loss function.\n",
-    "- Answer the questions\n"
+    "- Answer the questions\n",
+    "\n",
+    "\n",
+    "Don't begin working on this algorithms if you don't understand the blog: https://spinningup.openai.com/en/latest/spinningup/rl_intro3.html\n",
+    "\n",
+    "This exercise is short, but you should aim to understand everything in this code."
    ]
   },
   {
@@ -28,7 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install torchtyping"
+    "!pip install torchtyping\n",
+    "!pip install typeguard==2.13.3"
    ]
   },
   {
@@ -57,6 +63,7 @@
     "    for j in range(len(sizes)-1):\n",
     "        act = activation if j < len(sizes)-2 else output_activation\n",
     "        layers += [nn.Linear(sizes[j], sizes[j+1]), act()]\n",
+    "    \n",
     "    # What does * mean here? Search for unpacking in python\n",
     "    return nn.Sequential(*layers)\n",
     "\n",
@@ -81,8 +88,10 @@
     "    # What is the shape of obs?\n",
     "    @typechecked # To be typed\n",
     "    def get_policy(obs):\n",
-    "        # Warning: obs has not always the same shape.\n",
+    "        # Warning: obs sometimes has a batch dimension, sometimes there is no such dimension\n",
     "        logits = logits_net(obs)\n",
+    "        # Tip: Categorical is a convenient pytorch object which enable register logits (or a batch of logits)\n",
+    "        # and then being able to sample from this pseudo-probability distribution with the \".sample()\" method.\n",
     "        return Categorical(logits=logits)\n",
     "\n",
     "    # make action selection function (outputs int actions, sampled from policy)\n",
@@ -94,9 +103,11 @@
     "    # make loss function whose gradient, for the right data, is policy gradient\n",
     "    # What is the shape of obs?\n",
     "    @typechecked\n",
-    "    def compute_loss(obs: TensorType[\"b\", obs_dim], act: TensorType[\"b\"], weights: TensorType[\"b\"]):\n",
+    "    def compute_loss(obs: TensorType[\"b\", obs_dim], acts: TensorType[\"b\"], rewards: TensorType[\"b\"]):\n",
     "        \"\"\"TODO\"\"\"\n",
-    "        # Help: weights is a vector piecewise constant containing the total reward of each episode.\n",
+    "        # rewards: a piecewise constant vector containing the total reward of each episode.\n",
+    "        \n",
+    "        # Use the get_policy function to get the categorical object, then sample from it with the 'log_prob' method.‹\n",
     "        ...\n",
     "\n",
     "    # make optimizer\n",
@@ -160,9 +171,10 @@
     "\n",
     "        # take a single policy gradient update step\n",
     "        optimizer.zero_grad()\n",
+    "\n",
     "        batch_loss = compute_loss(obs=torch.as_tensor(batch_obs, dtype=torch.float32),\n",
-    "                                  act=torch.as_tensor(batch_acts, dtype=torch.int32),\n",
-    "                                  weights=torch.as_tensor(batch_weights, dtype=torch.float32)\n",
+    "                                  acts=torch.as_tensor(batch_acts, dtype=torch.int32),\n",
+    "                                  rewards=torch.as_tensor(batch_weights, dtype=torch.float32)\n",
     "                                  )\n",
     "        batch_loss.backward()\n",
     "        optimizer.step()\n",
@@ -202,8 +214,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.13 (main, Oct 13 2022, 16:12:19) \n[Clang 12.0.0 ]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
