Add don't forget to add "bias = False"

--- a/mlab/w1d2_resnet_new.ipynb
+++ b/mlab/w1d2_resnet_new.ipynb
@@ -32,6 +32,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "aTZ7T0pWlE_Z"
@@ -181,6 +182,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "i5h-wfoVlQ1V"
@@ -330,6 +332,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "e9JELMwklbL1"
@@ -358,6 +361,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "UQZFhcItleCL"
@@ -386,6 +390,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "IkpE30SAlgZO"
@@ -474,6 +479,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "p26eZkC4lk3v"
@@ -525,6 +531,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "t2oq4WmOlnbt"
@@ -640,6 +647,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "tp9bqNOOlqYy"
@@ -745,6 +753,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "6WRp5vG3ltN-"
@@ -796,6 +805,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "-DdTbIOllvpU"
@@ -869,6 +879,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "OpK_vt7OnTXa"
@@ -922,6 +933,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "MrxDztLXlzPt"
@@ -975,6 +987,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "lvkAPToyl1ZP"
@@ -1011,6 +1024,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "cfCxHGsql4C7"
@@ -1106,6 +1120,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "HA2FYTdTl7y4"
@@ -1167,6 +1182,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "nT-jayvhl9_6"
@@ -1249,6 +1265,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "dr8RDGrfmABE"
@@ -1370,6 +1387,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "N8PIbYt2mEHW"
@@ -1396,6 +1414,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Y3PM7_yLmF-3"
@@ -1485,6 +1504,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "zxsMq9yemJvw"
@@ -1576,8 +1596,9 @@
       "source": [
         "# You can comment this following line if you want to do it the hard way\n",
         "# by using the classes that you have created above!\n",
-        "from torch.nn import Flatten, Sequential, Conv2d, BatchNorm2d, ReLU, MaxPool2d, Linear, AvgPool2d\n",
+        "from torch.nn import Flatten, Sequential, BatchNorm2d, ReLU, MaxPool2d, Linear, AvgPool2d, Conv2d\n",
         "\n",
+        "# Warning: If you use pytorch's Conv2d, don't forget to add \"bias = False\" !\n",
         "\n",
         "class ResidualBlock(nn.Module):\n",
         "    def __init__(self, in_feats: int, out_feats: int, first_stride=1):\n",
@@ -1602,6 +1623,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "PYNkHnPjmPQj"
@@ -1636,6 +1658,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "vCNDNipNmR_B"
@@ -1862,6 +1885,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "svucGnMXmZtU"
@@ -1916,6 +1940,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "ptmNiSF8mcyK"
@@ -2016,6 +2041,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": []
