add back tensor part

--- a/days/w1d1/pytorch_tuto.ipynb
+++ b/days/w1d1/pytorch_tuto.ipynb
@@ -185,6 +185,56 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import torch\n",
+        "import math\n",
+        "\n",
+        "\n",
+        "dtype = torch.float\n",
+        "device = torch.device(\"cpu\")\n",
+        "# device = torch.device(\"cuda:0\") # Uncomment this to run on GPU\n",
+        "\n",
+        "# Create random input and output data\n",
+        "x = torch.linspace(-math.pi, math.pi, 2000, device=device, dtype=dtype)\n",
+        "y = torch.sin(x)\n",
+        "\n",
+        "# Randomly initialize weights\n",
+        "a = torch.randn((), device=device, dtype=dtype)\n",
+        "b = torch.randn((), device=device, dtype=dtype)\n",
+        "c = torch.randn((), device=device, dtype=dtype)\n",
+        "d = torch.randn((), device=device, dtype=dtype)\n",
+        "\n",
+        "learning_rate = 1e-3\n",
+        "for t in range(2000):\n",
+        "    # Forward pass: compute predicted y\n",
+        "    y_pred = ...\n",
+        "\n",
+        "    # Compute and print loss\n",
+        "    loss = ...\n",
+        "    if t % 100 == 99:\n",
+        "        print(t, loss)\n",
+        "\n",
+        "    # Backprop to compute gradients of a, b, c, d with respect to loss\n",
+        "    grad_a = ...\n",
+        "    grad_b = ...\n",
+        "    grad_c = ...\n",
+        "    grad_d = ...\n",
+        "\n",
+        "    # Update weights using gradient descent\n",
+        "    a -= ...\n",
+        "    b -= ...\n",
+        "    c -= ...\n",
+        "    d -= ...\n",
+        "\n",
+        "\n",
+        "print(f'Result: y = {a.item()} + {b.item()} x + {c.item()} x^2 + {d.item()} x^3')"
+      ]
+    },
+    {
       "attachments": {},
       "cell_type": "markdown",
       "metadata": {
