--- a/days/w1d1/pytorch_tuto.ipynb
+++ b/days/w1d1/pytorch_tuto.ipynb
@@ -92,7 +92,7 @@
         "import math\n",
         "\n",
         "# Create random input and output data\n",
-        "x = np.linspace(-math.pi, math.pi, 2000)\n",
+        "x = np.linspace(-math.pi, math.pi, 1000)\n",
         "y = np.sin(x)\n",
         "\n",
         "# Randomly initialize weights\n",
@@ -171,7 +171,9 @@
         "\n",
         "Also unlike numpy, PyTorch Tensors can utilize GPUs to accelerate their numeric computations. To run a PyTorch Tensor on GPU, you simply need to specify the correct device.\n",
         "\n",
-        "Here we use PyTorch Tensors to fit a third order polynomial to sine function. Like the numpy example above we need to manually implement the forward and backward passes through the network:"
+        "Here we use PyTorch Tensors to fit a third order polynomial to sine function. Like the numpy example above we need to manually implement the forward and backward passes through the network.\n",
+        "\n",
+        "**Note:** This is very close to the numpy implementation, and is more a translation exercise than one where you need to think a lot. We're just doing things step by step."
       ]
     },
     {
@@ -199,7 +201,7 @@
         "# device = torch.device(\"cuda:0\") # Uncomment this to run on GPU\n",
         "\n",
         "# Create random input and output data\n",
-        "x = torch.linspace(-math.pi, math.pi, 2000, device=device, dtype=dtype)\n",
+        "x = torch.linspace(-math.pi, math.pi, 1000, device=device, dtype=dtype)\n",
         "y = torch.sin(x)\n",
         "\n",
         "# Randomly initialize weights\n",
@@ -209,7 +211,8 @@
         "d = torch.randn((), device=device, dtype=dtype)\n",
         "\n",
         "learning_rate = 1e-3\n",
-        "for t in range(2000):\n",
+        "epochs = 2000\n",
+        "for t in range(epochs):\n",
         "    # Forward pass: compute predicted y\n",
         "    y_pred = ...\n",
         "\n",
@@ -231,7 +234,10 @@
         "    d -= ...\n",
         "\n",
         "\n",
-        "print(f'Result: y = {a.item()} + {b.item()} x + {c.item()} x^2 + {d.item()} x^3')"
+        "print(f'Result: y = {a.item()} + {b.item()} x + {c.item()} x^2 + {d.item()} x^3')\n",
+        "\n",
+        "# Check with the plot!\n",
+        "plot(y_pred, y, x)"
       ]
     },
     {
@@ -280,7 +286,7 @@
         "# Create Tensors to hold input and outputs.\n",
         "# By default, requires_grad=False, which indicates that we do not need to\n",
         "# compute gradients with respect to these Tensors during the backward pass.\n",
-        "x = torch.linspace(-math.pi, math.pi, 2000, device=device, dtype=dtype)\n",
+        "x = torch.linspace(-math.pi, math.pi, 1000, device=device, dtype=dtype)\n",
         "y = torch.sin(x)\n",
         "\n",
         "# Create random Tensors for weights. For a third order polynomial, we need\n",
@@ -328,7 +334,9 @@
         "        d.grad = ...\n",
         "\n",
         "print(f'Result: y = {a.item()} + {b.item()} x + {c.item()} x^2 + {d.item()} x^3')\n",
-        "# TODO: Use the the plot function to check your results!"
+        "\n",
+        "# Check with the plot!\n",
+        "plot(y_pred, y, x)"
       ]
     },
     {
@@ -394,7 +402,7 @@
         "\n",
         "\n",
         "# Create Tensors to hold input and outputs.\n",
-        "x = torch.linspace(-math.pi, math.pi, 2000)\n",
+        "x = torch.linspace(-math.pi, math.pi, 1000)\n",
         "y = torch.sin(x)\n",
         "\n",
         "# For this example, the output y is a linear function of (x, x^2, x^3), so\n",
@@ -468,8 +476,8 @@
         "# For linear layer, its parameters are stored as `weight` and `bias`.\n",
         "print(f'Result: y = {linear_layer.bias.item()} + {linear_layer.weight[:, 0].item()} x + {linear_layer.weight[:, 1].item()} x^2 + {linear_layer.weight[:, 2].item()} x^3')\n",
         "\n",
-        "\n",
-        "# TODO: Use the the plot function to check your results!"
+        "# Check with the plot!\n",
+        "plot(y_pred, y, x)"
       ]
     },
     {
