--- a/days/w1d2/Adversarial_Attacks.ipynb
+++ b/days/w1d2/Adversarial_Attacks.ipynb
@@ -255,7 +255,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Deep CNNs on ImageNet (Only Run)"
+        "## Deep CNNs on ImageNet (Only Run)\n",
+        "\n",
+        "You can just collapse this section."
       ]
     },
     {
@@ -369,7 +371,8 @@
       },
       "outputs": [],
       "source": [
-        "# This takes some time and is not necessary.\n",
+        "# This takes some time and is not necessary \n",
+        "# (and this might be representative of people in capablity labs)\n",
         "# _ = eval_model(data_loader)"
       ]
     },
@@ -547,10 +550,10 @@
         "    labels: Corresponding labels of the images (B)\n",
         "\n",
         "    Returns:\n",
-        "    fake_imgs (B C H W), noise_grads (B C H W)\n",
+        "    detached tensor: fake_imgs (B C H W), noise_grads (B C H W)\n",
         "    \"\"\"\n",
         "    # Tip: Just calculate the loss and do a gradient ascent instead of a gradient descent.\n",
-        "    # (The solution uses the \"torch.gather\" function, but this is not really necessary.)\n",
+        "    # (The solution uses the \"torch.gather\" function, but this is absolutely not necessary.)\n",
         "    ... \n",
         "    ...\n",
         "\n",
@@ -558,6 +561,7 @@
         "    # The following lines only show the type of what has to be returned and should be adapted\n",
         "    fake_imgs, noise_grads = imgs, torch.sign(imgs)\n",
         "    fake_imgs.detach_()\n",
+        "    noise_grads.detach()\n",
         "    return fake_imgs, noise_grads"
       ]
     },
